- Dates Handling - Marks Calculation - Display Rubrics on Feedback pages - Show rubric description on mouse hover - Resolve Duplicate title error for add/edit solution

--- a/views/admin-lte/course/peerAssessment/peerReview/components/rubrics/rubrics.ejs
+++ b/views/admin-lte/course/peerAssessment/peerReview/components/rubrics/rubrics.ejs
@@ -10,7 +10,7 @@
             <label class="col-sm-5 control-label"></label>
             <div class="col-sm-7">
                 <div class="checkbox" ng-repeat="r in rubrics">
-                    <label><input type="checkbox" value="{{r._id}}" ng-checked="newAssignObj.reviewSettings.rubrics.indexOf(r._id) > -1" ng-click="toggleSelection(r._id)">{{r.title}}</label>
+                    <label data-toggle="tooltip" title="{{r.description}}"><input type="checkbox" value="{{r._id}}" ng-checked="newAssignObj.reviewSettings.rubrics.indexOf(r._id) > -1" ng-click="toggleSelection(r._id)">{{r.title}}</label>
                 </div>
             </div>
         </div>
