--- a/views/admin-lte/course/peerAssessment/solution/modals/addEditSolutionModal.ejs
+++ b/views/admin-lte/course/peerAssessment/solution/modals/addEditSolutionModal.ejs
@@ -36,7 +36,7 @@
                                         <label for="inputReviewDocuments" class="col-sm-4 control-label">Solution Documents</label>
                                         <div class="col-sm-2">
                                             <div class="btn btn-sm btn-default"
-                                                 ngf-select accept=".pdf"
+                                                 ngf-select accept="*"
                                                  ng-model="selSolutionDocuments" ngf-multiple="true" ngf-keep="true" ngf-max-size='1000000'><i
                                                         class="ionicons ion-document-text"></i> &nbsp; Upload Files
                                             </div>
