implemented pb control

--- a/public/angular-peerassessment/peerAssessment.css
+++ b/public/angular-peerassessment/peerAssessment.css
@@ -1,3 +1,9 @@
+/*
+
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+WARNING THIS FILE IS COMMENTED BECAUSE IT OVERWRITES DEFAULT STYLES
+PLEASE FIX IT BEFORE YOU UNCOMMENT !!!!
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 .horizontal-max {
     max-width: inherit;
 }
@@ -46,3 +52,4 @@ form .progress {
     width: 0;
 }
 
+*/
