Fixed global css selector issues

--- a/views/admin-lte/course/peerAssessment/peerAssessment.ejs
+++ b/views/admin-lte/course/peerAssessment/peerAssessment.ejs
@@ -1,4 +1,4 @@
-<div ng-controller="PeerAssessmentController">
+<div class = "pa" ng-controller="PeerAssessmentController">
     <div ng-include="currentView"></div>
     <% include peerReview/modals/confirmDeleteAssignmentModal %>
     <% include solution/modals/addEditSolutionModal%>
