--- a/public/angular-peerassessment/peerAssessment.css
+++ b/public/angular-peerassessment/peerAssessment.css
@@ -1,18 +1,18 @@
-.horizontal-max {
+.pa .horizontal-max {
     max-width: inherit;
 }
 
-.original-form-control {
+.pa .original-form-control {
     border: 1px solid #ccc;
     border-radius: 4px !important;
     box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
 }
 
-.btn-file {
+.pa .btn-file {
     position: relative;
     overflow: hidden;
 }
-.btn-file input[type=file] {
+.pa .btn-file input[type=file] {
     position: absolute;
     top: 0;
     right: 0;
@@ -28,21 +28,20 @@
     display: block;
 }
 
-.checkbox-line-adjust {
+.pa .checkbox-line-adjust {
     margin-top: 10px !important;
 }
 
-form .progress {
+.pa form .progress {
     line-height: 15px;
 }
-.progress {
+.pa .progress {
     display: inline-block;
     width: 100px;
     border: 3px groove #CCC;
 }
-.progress div {
+.pa .progress div {
     font-size: smaller;
     background: orange;
     width: 0;
 }
-
