--- a/views/my-course/participation-balance.ejs
+++ b/views/my-course/participation-balance.ejs
@@ -2,28 +2,43 @@
 
     <!--  Recursive template  -->
     <script type="text/ng-template" id="field_renderer.html">
-        <div ng-if="field.type != 'contentNode'">
-            <label for="{{field._id}}">{{field.name}}</label>
-            <input id="{{field._id}}" type="checkbox"
-                   ng-init="expandState[field._id]=false"
-                   ng-model="expandState[field._id]"/>
-            <ul ng-if="field.childrens.length > 0">
-                <li ng-repeat="field in field.childrens" ng-include="'field_renderer.html'"></li>
-            </ul>
+        <div class="panel box box-primary ng-scope"
+             ng-style="{'background' : !field.type ? '#ecf0f5' : ''}"
+             ng-show="field.type != 'contentNode'">
+            <!-- Topic/Subtopic node -->
+            <div ng-if="field.type != 'contentNode'">
+                <label for="{{field._id}}">
+                    <h4 style="padding-left: 15px">
+                        <i ng-show="field.childrens.length > 0 || field.resources.length > 0"
+                           ng-class="expandState[field._id]==true ? 'fa fa-caret-up':'fa fa-caret-down'"></i>
+                        {{field.name}}
+                        <a type="button" ng-show="!field.type" class="label label-default" title="Go to course"
+                           style="font-size: 10px; padding: 5px;"
+                           href="/course/{{field.slug}}/#/cid/{{field._id}}">
+                            <i style="margin-right: 5px" class=" fa fa-external-link"></i>
+                        </a>
+                    </h4>
+                </label>
+                <input id="{{field._id}}" type="checkbox" ng-init="expandState[field._id]=false"
+                       ng-model="expandState[field._id]"/>
+                <ul ng-if="field.childrens.length > 0">
+                    <li ng-repeat="field in field.childrens" ng-include="'field_renderer.html'"></li>
+                </ul>
+            </div>
         </div>
 
-        <li ng-if="field.type == 'contentNode'" class="file" style="width: 50%">
+        <!-- Content node -->
+        <li ng-if="field.type == 'contentNode'" class="file" style="margin-bottom: 5px" >
             <a href="/treeNode/{{field._id}}/#/cid/{{field.courseId}}/nid/{{field._id}}"
-               ng-mouseover="isVisible=true"
-               ng-mouseleave="isVisible=false"
-               style="display: inline-block; padding: 2px 5px">
-
-                <div style="background: gray; width: 40px; padding: 0 2px; display: inline-block">
-                    <span class="pull-right" ng-style="{ 'color': percentToHSLColor(getPBP(field), true)}">{{getPBP(field) * 100}}%</span>
-                </div>
-                {{field.name}}
+               ng-mouseover="isVisible=true" ng-mouseleave="isVisible=false">
+                <span style="background: #ecf0f5; width: 40px; padding: 0; display: inline-block; text-align: right"
+                      ng-style="{ 'color': percentToHSLColor(getPBP(field), true)}">{{getPBP(field) * 100}}%</span>
+                <span>{{field.name}}</span>
             </a>
-            <div ng-show="isVisible" class="info-box bg-aqua" style="opacity: 0.95; position: absolute; z-index: 5;">
+
+            <!-- Popup -->
+            <div ng-show="isVisible" class="info-box bg-aqua"
+                 style="opacity: 0.95; position: absolute; z-index: 5; width: 50%">
                 <span class="info-box-icon"><i class="fa fa-comments-o"></i></span>
                 <div class="info-box-content">
                     <span class="info-box-text"> {{field.name}}</span>
@@ -37,11 +52,11 @@
                 </div>
             </div>
         </li>
+
     </script>
 
-
     <div ng-show="courses.enrolled.length > 0">
-        <h3>Enrolled
+        <h3><a>Enrolled</a>
             <div style="display: inline-block">
                 <button ng-click="setExpandState(true)" type="button" class="btn btn-box-tool"><i
                             class="fa fa-plus"></i></button>
@@ -55,11 +70,11 @@
     </div>
 
     <div ng-show="courses.created.length > 0">
-        <h3>Created
+        <h3><a>Created</a>
             <div style="display: inline-block">
-                <button ng-click="setExpandState(true)" type="button" class="btn btn-box-tool"><i
+                <button title="Expand all" ng-click="setExpandState(true)" type="button" class="btn btn-box-tool"><i
                             class="fa fa-plus"></i></button>
-                <button ng-click="setExpandState(false)" type="button" class="btn btn-box-tool"><i
+                <button title="Collapse all" ng-click="setExpandState(false)" type="button" class="btn btn-box-tool"><i
                             class="fa fa-minus"></i></button>
             </div>
         </h3>
