--- a/views/my-course/participation-balance.ejs
+++ b/views/my-course/participation-balance.ejs
@@ -55,7 +55,7 @@
                         {{getAnnotationProgress(field) * 100 | number:0}}% annotation ({{field.userAnnotations}} / {{field.totalAnnotations }})
                     </span>
                     <span class="progress-description">
-                        {{getWatchProgress(field) * 100 | number:0}}% watch progress
+                        {{getWatchProgress(field) * 100 | number:0}}% video watch progress
                     </span>
                     <span class="progress-description">
                         {{getLinksProgress(field) * 100 | number:0}}% linked content
