--- a/views/admin-lte/course/map/map.ejs
+++ b/views/admin-lte/course/map/map.ejs
@@ -5,11 +5,18 @@
          data-shape="{{getDataShape(data.type)}}"
          ng-class="{'owned': isAuthorized(data), 'deleted': data.isDeleted}"
          ng-hide="data.isDeletedForever"
-         ng-style="{'opacity' : (queryText && matchesFound[data._id] !== true) ? 0.25 : 1}">
+         ng-style="getNodeStyle(data)">
 
         <div class="privacy-icon" ng-show="isAuthorized(data) && data.type=='contentNode'">
             <i class="fa fa-lock private" ng-show="data.isPrivate === true"></i>
             <i class="fa fa-unlock public" ng-show="data.isPrivate !== true"></i>
+        </div>
+
+        <div class="hide-node-icon" ng-hide="data.isDeleted">
+            <a class="pointer" ng-click="toggleNodeVisibility(data)">
+                <i class="ionicons ion-eye" ng-show="data.isHidden"></i>
+                <i class="ionicons ion-eye-disabled" ng-hide="data.isHidden"></i>
+            </a>
         </div>
 
         <span ng-show="data.type == 'contentNode' && data.resources.length > 0">
