--- a/views/admin-lte/course/map/map.ejs
+++ b/views/admin-lte/course/map/map.ejs
@@ -2,6 +2,7 @@
     <div class="w {{data.type}}" id="t{{data._id}}"
          data-from-root-x="{{data.positionFromRoot.x}}"
          data-from-root-y="{{data.positionFromRoot.y}}"
+         style="z-index: 5"
          data-shape="{{getDataShape(data.type)}}"
          ng-class="{'owned': isAuthorized(data), 'deleted': data.isDeleted}"
          ng-hide="data.isDeletedForever"
